# project-architecture-template

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  Dockerfile  README.md  alembic.ini  di.toml  docker-compose.base.yaml  docker-compose.prod.yaml  docker-compose.stage.yaml  docker-compose.test.yaml  docker-compose.yaml  layers.toml  llms.txt  project-prompt.toml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.claude/commands/: changelog.md  commit.md
alembic/: README.md  env.py
alembic/versions/: 202556_1e964bd23329_first.py
project/: container.py  datatypes.py  exceptions.py  logger.py  settings.py
project/components/base/: handlers.py  models.py  repositories.py  schemas.py
project/components/chat/: endpoints.py  enums.py  interfaces.py  models.py  repositories.py  schemas.py  service.py  use_cases.py
project/components/chat/ai/: agent.py  prompts.py
project/components/chat/answer/: service.py
project/components/user/: models.py  repositories.py  schemas.py  service.py
project/domains/base/: exceptions.py  handlers.py  models.py  repositories.py  repository.py  schemas.py
project/domains/chat/: endpoints.py  interfaces.py  models.py  repositories.py  schemas.py  service.py  use_cases.py
project/domains/chat/answer/: service.py
project/domains/user/: models.py  repositories.py
project/infrastructure/: api.py  container.py  exceptions.py
project/infrastructure/adapters/: acache.py  adatabase.py  auth.py  base_client.py  cache.py  database.py  keycloak.py  llm.py  stt.py  voice.py
project/infrastructure/apps/: api.py  bot.py  flask.py  main.py
project/infrastructure/utils/: base_client.py  telegram.py
project/libs/: fsm.py  log.py  retry.py  structures.py
project/utils/: base_client.py  log.py  retry.py  structures.py
scripts/: project_prompt.py  project_prompt_ui.py  update_agents.py
specs/features/: project-prompt-script.md
specs/rules/: adapters.md  alembic-db-migration.md  anti-patterns.md  auto-tests.md  create-adapter.md  create-orm-model.md  create-redis-repository.md  database-sessions.md  development.md  exceptions.md  fastapi-and-api-endpoints.md  layers.md  lazy-init-objects.md  linters.md  monitoring.md  project-utils.md  python-libs.md  settings-and-environments.md  telegram-handlers.md  tiny-types.md
tests/: conftest.py  factories.py  ruff-tests.toml
tests/test_domains/test_chat/: test_endpoints.py  test_use_case.py
tests/test_domains/test_user/: test_repository.py
tests/test_infrastructure/: test_async_redis.py  test_database.py  test_keycloak.py  test_redis.py
tests/test_infrastructure/test_api/: test_app.py
tests/test_project/: conftest.py  test_architecture_bounds.py  test_structure.py
tests/test_utils/: test_base_client.py  test_fsm.py
