[project]
name = "python-project-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Pavel Maksimov", email = "vur21@ya.ru"}
]
keywords = [
  "project-template",
  "styleguide",
]

dependencies = [
    "orjson~=3.10.12",
    "pydantic-settings~=2.7.1",
    "sqlalchemy~=2.0.37",
    "fastapi~=0.115.8",
    "uvicorn~=0.34.0",
    "psycopg2-binary~=2.9.10",
    "aiohttp~=3.11.14",
    "niquests>=3.13.1",
    "pottery>=3.0.1",
    "alembic>=1.15.2",
    "prometheus-client>=0.23.1",
]

[dependency-groups]
voice = [
    "pydub>=0.25.1",
]
dev = [
    "aioresponses~=0.7.8",
    "di-linter==1.3.0",
    "factory-boy~=3.3.1",
    "freezegun~=1.5.1",
    "httpx~=0.28.1",
    "layers-linter>=3.2.2",
    "mypy~=1.15.0",
    "pre-commit>=4.2.0",
    "pytest~=8.3.4",
    "pytest-archon~=0.0.6",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "radon>=5.0",
    "responses>=0.25.7",
    "ruff~=0.8.2",
    "testcontainers>=4.10.0",
    "vulture>=2.14",
    "wily>=1.25",
    "xenon>=0.9.3",
]
llm = [
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "llm-common>=2.1.2",
    "openai>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/pavelmaksimov/project-architecture-template"
Repository = "https://github.com/pavelmaksimov/project-architecture-template"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
include = [
    "project/**/*.py",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "E731", "PYI001", "SIM117", "ARG001", "E731", "E741", "UP035", "UP028", "RET504", "S101", "RUF002", "C901",
    "BLE001", "UP038",
]
select = [
    "E", "E4", "E7", "E9", "F", "B", "ERA", "FAST", "YTT", "UP", "FURB", "RUF", "PLC", "PLE",
    "ASYNC", "S", "BLE", "FBT", "A", "COM", "C", "EM", "FA", "INT", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20",
    "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID", "TC", "ARG", "PTH", "FLY", "C90", "NPY", "N", "PERF",
    "D201", "D204", "D206", "D207", "D208", "D209", "D210", "D211", "D213", "D300", "D402", "D403", "D418", "D419",
    "PLW0245", "PLW0128", "PLW0127", "PLW0406", "PLW0602", "PLW0603", "PLW0642", "PLW0711",
    "PLW1501", "PLW1508", "PLW1509", "PLW1510", "PLW2101", "PLW2901", "PLW3301",
    "TRY004", "TRY201", "TRY203", "TRY300", "TRY301", "TRY401",
    "TD004", "TD005", "TD006", "TD007",
    # "W", "DOC", "D", "PGH, "DJ", "EXE", "FIX", "DTZ", "CPY", "I", "PD", "ANN", "PLR", PLW
]

#flake8-import-conventions.banned-from = [ "datetime", "typing" ]
#[flake8-import-conventions.aliases]
#datetime = "dt"
#typing = "t"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type", "filter"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
mypy_path = "project"
python_version = "3.12"
pretty = true
show_traceback = true
color_output = true
ignore_missing_imports = true
strict = false
local_partial_types = true
warn_unreachable = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    # "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    # "explicit-override",
    # "mutable-override",
    "unimported-reveal",
    "deprecated",
]

disable_error_code = [
    "no-untyped-def",
    "no-untyped-call"
]

[tool.vulture]
exclude = ["interfaces.py", "llm.py"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
make_whitelist = false
min_confidence = 100
paths = ["project", "whitelist.py"]
sort_by_size = true
verbose = false

#[tool.ruff.flake8-tidy-imports]
#banned-module-level-imports = []
#banned-api = []
#ban-relative-imports = []


[[tool.mypy.overrides]]
module = [
    "project.infrastructure.adapters.voice",
]
disable_error_code = [
    "redundant-expr",
]
